<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:padding="10dp"
    tools:context="com.example.android.a80ssongsandartistsquiz.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/banner"
        android:scaleType="centerCrop"
        android:contentDescription="@string/banner"/>
    <TextView
        android:background="#69DBF7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="18sp"
        android:text="@string/object_of_game"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/border">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#69DBF7">
            <ImageView
                android:background="#69DBF7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_play_arrow_black_24dp"
                android:contentDescription="@string/play"
                android:layout_weight="1"
                android:padding="16dp"
                android:onClick="play_physical"/>
            <ImageView
                android:background="#69DBF7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_pause_black_24dp"
                android:padding="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/pause"
                android:onClick="pause_physical"/>
            <ImageView
                android:background="#69DBF7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_stop_black_24dp"
                android:padding="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/stop"
                android:onClick="stop_physical"/>

        </LinearLayout>

        <TextView
            android:background="#69DBF7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:padding="16dp"
            android:textSize="18sp"/>
        <EditText
            android:background="#69DBF7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artist_name"
            android:id="@+id/physical"
            android:padding="16dp"/>

    </LinearLayout>
</LinearLayout>